Fixing z-index values for tooltip and cardlink clicks

--- a/src/components/tutorial-collection-cards/components/card-badges/card-badges.module.css
+++ b/src/components/tutorial-collection-cards/components/card-badges/card-badges.module.css
@@ -9,4 +9,5 @@
 
 .listItem {
 	line-height: normal;
+	z-index: 1;
 }
